2003-02-24  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Changed \batchmode into \nonstopmode so that
	possible Kpathsea messages actually show during TeX runs.

2003-02-05  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics/__init__.py, src/graphics/jpeg2ps.py: Introduced
	automatic JPEG to EPS conversion with jpeg2ps.

2003-02-03  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py: Modified action "deps" so that dependencies are
	listed only once.

2003-01-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Fixed the behaviour in the case where LaTeX cannot
	be run.

2003-01-28  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics/mpost.py: Introduced class MPLogCheck to report
	Metapost errors correctly.

	* setup.py: Removed accented characters in comments so that the
	new specification is followed.

2002-12-04  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.5 released.

	* debian/control: Fixed dependency rules (again).

2002-11-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py (Message.error): Allowed the error lines to be
	unspecified.

	* src/modules/bibtex.py: Added show_error() to parse BibTeX logs
	for error messages.

2002-11-27  Emmanuel Beffara  <manu@beffara.org>

	* man/: Updated the man pages with --check and the actual meaning
	of --deps.

	* src/modules/bibtex.py: Added bibliography databases and style
	files to the list of dependencies.

	* src/cmd_info.py: Redefined the --deps action to actually return
	all leaf dependencies.

	* src/util.py: Added method leaves() in Depend to report leaf
	dependecies.

2002-11-26  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py: Added action --check in rubber-info, turned
	--help and --version into actions.

	* src/__init__.py: Fixed the regular expression for file name
	tracking in logs.

	* src/__init__.py, src/info.py: Introduced the method info() in
	Message for displaying non-error information.

2002-11-21  Emmanuel Beffara  <manu@beffara.org>
